objects/ZipContent__c.object
<CustomObject>
    <description>Object to store zip content details to be sent to heroku postgres.</description>
    <fields>
        <fullName>BasePath__c</fullName>
        <description>path for content version</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BasePath</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <description>Parent content document record for content version</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersion__c</fullName>
        <description>stores content version Id of zip files</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ContentVersion</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <defaultValue>$Organization.Id</defaultValue>
        <description>current org id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OrgId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedObjectId__c</fullName>
        <description>Id of parent case for content version</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status if content is unzipped or not</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Incorrect Format</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ZipContent</label>
    <nameField>
        <displayFormat>ZIPC-{00000}</displayFormat>
        <label>ZipContent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZipContents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>